# Diplom_SB1

./: .env_example  Docker-compose.yaml  Dockerfile  README.md  pyproject.toml
ads/: admin.py  filters.py  models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ad_created_at_alter_comment_created_at.py
config/: settings.py  urls.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_alter_user_managers_user_token.py
